hphp/hack/test/typecheck/parent_abstract_construct.php.exp
File "parent_abstract_construct.php", line 9, characters 5-34:
Cannot call `parent::__construct()`; it is abstract (Typing[4073])
File "parent_abstract_construct.php", line 4, characters 28-38:
Declaration is here
